<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>local_pose_publisher</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="melike@leodrive.ai">melike</maintainer>
  <maintainer email="mdogru@leodrive.ai">Mehmet Dogru</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <build_depend>autoware_cmake</build_depend>

  <depend>rclcpp</depend>
  <depend>autoware_auto_mapping_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>libboost-dev</depend>
  <depend>geographiclib</depend>
  <depend>lanelet2_extension</depend>
  <depend>map_loader</depend>
  <depend>vehicle_info_util</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_ros</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
